tests/typing/fail/emptystorage/varexp.act
contract LValue

constructor()

creates

    uint x := true and x
    
invariants

    x == 0
